[package]
name = "async_job"
version = "0.1.4"
edition = "2021"
description = "Simple async cron job crate for Rust"
repository = "https://github.com/spider-rs/async_job"
readme = "README.md"
keywords = ["crawler", "spider"]
categories = ["web-programming"]
license = "MIT"
documentation = "https://docs.rs/async_job"
authors = ["j-mendez <jeff@a11ywatch.com>"]

[dependencies]
async-trait = "0.1.75"
chrono = "0.4.31"
cron = "0.12.0"
lazy_static = "1.4.0"
log = "0.4.20"
tokio = { version = "^1.35.0", features = [ "macros", "time", "parking_lot", "sync" ] }

[features]
default = ["rt-multi-thread"]
rt = ["tokio/rt"]
rt-multi-thread = ["tokio/rt-multi-thread"]